@startuml

title __SERVICE's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace auth {
      namespace service {
        class com.vale.warehouses.auth.service.AuthService {
            - authenticationManager : AuthenticationManager
            + findUserByToken()
            + isTokenValid()
            + login()
            + logout()
        }
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace auth {
      namespace service {
        class com.vale.warehouses.auth.service.UserDetailsServiceImpl {
            + loadUserByUsername()
            {static} - getAuthorities()
        }
      }
    }
  }
  

  com.vale.warehouses.auth.service.AuthService .up.|> com.vale.warehouses.auth.service.interfaces.AuthServiceInterface
  com.vale.warehouses.auth.service.AuthService o-- com.vale.warehouses.auth.repository.TokenRepository : tokenRepository
  com.vale.warehouses.auth.service.AuthService o-- com.vale.warehouses.auth.service.UserDetailsServiceImpl : userDetailsService
  com.vale.warehouses.auth.service.AuthService o-- com.vale.warehouses.auth.repository.UserRepository : userRepository
  com.vale.warehouses.auth.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.vale.warehouses.auth.service.UserDetailsServiceImpl o-- com.vale.warehouses.auth.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
